# quiz_services

./: .env.example  .gitignore  README.md  docker-compose.yaml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: main.py
api/app/api/v1/: routers.py
api/app/api/v1/endpoints/: quiz.py  users.py
api/app/core/: config.py  container.py
api/app/db/: __init__.py  manager.py  transaction.py
api/app/db/models/: __init__.py  base.py  mixins.py  user.py  users.py
api/app/repositories/: __init__.py  base.py  user.py
api/app/schemas/: user.py
api/app/services/: __init__.py  base.py  user.py
api/migrations/: env.py
api/migrations/versions/: 275b289f174b_add_quiz_answer_field.py  688c544eac08_remove_quiz_answer_field.py  8df4ce4bda52_users.py  e6c28cad9bc4_initial.py  e9b922b42b2f_initial.py  f6c0d68cef47_add_quiz_answer_field.py
api/nginx/servers/: site.conf
bot/: Dockerfile  loader.py  main.py  pyproject.toml  reloader.py
bot/core/: celery.py  config.py  container.py
bot/handlers/: quiz.py  routing.py  start.py
bot/schemas/: quiz.py
bot/services/: quiz_api.py  telegram.py
bot/states/: quiz.py
bot/tasks/: quiz.py
bot/utils/: api.py  number.py  tracing.py
